--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,8 +11,8 @@
   <link rel="stylesheet" href="{{ "/assets/fonts/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
 
   {% if site.blog_theme == "light" %}
-    {% stylesheet light %}
+    {% css light %}
   {% else %}
-    {% stylesheet dark %}
+    {% css dark %}
   {% endif %}
 </head>
